fix sizing of cover page on mobile

--- a/src/animation.css
+++ b/src/animation.css
@@ -51,7 +51,7 @@
   }
 }
 
-@media only screen and (max-width: 3000px) {
+@media only screen and (max-width: 2800px) {
     .content h1 {
       font-size: 4rem; /* Smaller font size for mobile */
     }
